--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="holder0">
+		<div class="item0" style="background-color:red">1</div>
+		<div class="item0">2</div>
+		<div class="item0" style="background-color:green">3</div>
+	</div>
+	<br>
+	<div class="holder">
+		<div class="item" style="background-color:red">1</div>
+		<div class="item">2</div>
+		<div class="item" style="background-color:green">3</div>
+		<div class="item" style="background-color:green">4</div>
+		<div class="item" style="background-color:green">5</div>
+		<div class="item" style="background-color:green">6</div>
+		<div class="item" style="background-color:green">7</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
